@startuml

!define MASTER F9DFD5
!define TRANSACTION CAE7F2

entity "users" as users <<M,MASTER>> {
    + id: INT <<PK>>
    username: VARCHAR(255)
    email: VARCHAR(255)
    password: VARCHAR(255)
    display_name: VARCHAR(255)
    profile_image_url: VARCHAR(255)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "workspaces" as workspaces <<M,MASTER>> {
    + id: INT <<PK>>
    name: VARCHAR(255)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "workspace_members" as workspace_members <<T,TRANSACTION>> {
    + id: INT <<PK>>
    - user_id: INT <<FK>>
    - workspace_id: INT <<FK>>
    role: TINYINT UNSIGNED
    joined_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "channels" as channels <<M,MASTER>> {
    + id: INT <<PK>>
    - workspace_id: INT <<FK>>
    name: VARCHAR(255)
    description: VARCHAR(255)
    is_private: BOOLEAN
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "channel_members" as channel_members <<T,TRANSACTION>> {
    + id: INT <<PK>>
    - user_id: INT <<FK>>
    - channel_id: INT <<FK>>
    joined_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "messages" as messages <<T,TRANSACTION>> {
    + id: INT <<PK>>
    - user_id: INT <<FK>>
    - channel_id: INT <<FK>>
    content: TEXT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "threads" as threads <<T,TRANSACTION>> {
    + id: INT <<PK>>
    - parent_message_id: INT <<FK>>
    - user_id: INT <<FK>>
    content: TEXT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

users ||-left-o{ workspace_members
workspaces ||-right-o{ workspace_members
workspaces ||-down-o{ channels
users ||--o{ channel_members
channels ||-right-o{ channel_members
users ||--o{ messages
channels ||--o{ messages
users ||--o{ threads
messages ||-right-o{ threads

@enduml
